deploy/k8s/overlays/prod/env.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labelstudio
spec:
  template:
    spec:
      containers:
        - name: labelstudio
